chore(list): Fix spacing in list

--- a/src/_includes/scss/_list.scss
+++ b/src/_includes/scss/_list.scss
@@ -45,6 +45,10 @@
 
   &__item {
     @extend %list-item;
+
+    + .list__item {
+      margin-top: 0.25em;
+    }
   }
 }
 
